--- a/responsive.css
+++ b/responsive.css
@@ -1,30 +1,1271 @@
 @media only screen and (max-width: 1240px) {
 
+h1 {
+    font-size: 57px;
+}
 
+h2 {
+    font-size: 49px;
+}
+
+.title_shape_1 {
+    top: 23px;
+    left: 145px;
+}
+
+.title_shape_2 {
+    top: 23px;
+    left: 244px;
+}
+
+.promo_tree_cols {
+	margin-top: 35px;
+}
+
+.circle_image_1 {
+	width: 200px;
+	height: 300px;
+}
+
+.circle_image_star {
+    left: -40px;
+}
+
+.promo_tree_cols > div:nth-child(1) {
+    width: 170px;
+}
+
+.promo_tree_cols > div:nth-child(2) {
+    width: calc(60% - 170px);
+}
+
+.thumb_01_header {
+    min-height: 104px;
+}
+
+.title_shape_3 {
+    top: 17px;
+    left: 242px;
+}
+
+.title_shape_4 {
+    top: 16px;
+    left: 8px;
+}
+
+.title_shape_5 {
+    top: 17px;
+    left: 92px;
+}
+
+.title_shape_6 {
+    top: 17px;
+    left: 342px;
+}
+
+.two_cols_2 > div:nth-child(2) {
+    padding-left: 40px;
+}
+
+.thumbnails_4_wrapp {
+    margin: 125px -30px 20px -30px;
+}
+
+.thumb_4 {
+    width: 50%;
+    padding: 7px 30px;
+}
+
+.thumb_4 h3 {
+    font-size: 20px;
+}
+
+.thumb_4 p {
+    font-size: 16px;
+    line-height: 22px;
+}
+
+.thumb_4_img {
+    width: calc(50% - 50px);
+    left: 0;
+}
+
+.title_shape_7 {
+    top: 17px;
+    left: 299px;
+}
+
+.title_shape_8 {
+    top: 17px;
+    left: 72px;
+}
+
+.section_4 {
+    padding: 80px 0 40px 0;
+}
+
+.two_cols_3 > div:nth-child(1) {
+    width: calc(100% - 250px);
+    padding-right: 30px;
+}
+
+.two_cols_3 > div:nth-child(2) {
+    width: 250px;
+}
+
+.circle_img_5 {
+	width: 250px;
+	height: 392px;
+}
+
+.thumb_5_inner h3 {
+    font-size: 20px;
+    line-height: 27px;
+}
+
+.thumbnails_5_wrapp {
+    margin: 8px -15px;
+}
+
+.two_cols_3_2 > div:nth-child(1) {
+    width: 260px;
+}
+
+.two_cols_3_2 > div:nth-child(2) {
+    width: calc(100% - 260px);
+    padding-left: 5%;
+}
+
+.circle_img_6 {
+	width: 250px;
+	height: 392px;
+}
+
+.title_shape_9 {
+    top: 17px;
+    left: 65px;
+}
+
+.title_shape_10 {
+    top: 16px;
+    left: 9px;
+}
+
+.title_shape_11 {
+    top: 17px;
+    left: 114px;
+}
+
+.title_shape_12 {
+    top: 17px;
+    left: 57px;
+}
+
+.questions {
+    padding: 45px 0 52px 0;
+}
+
+.title_shape_13 {
+    top: 17px;
+    left: 328px;
+}
+
+.title_shape_14 {
+    top: 16px;
+    left: 295px;
+}
+
+.title_shape_15 {
+    top: 16px;
+    left: 434px;
+}
+
+}
+
+@media only screen and (max-width: 1140px) {
+
+.header_site_templ {
+    padding: 5px 0 3px 0;
+}
+
+.header_site_templ > .left {
+    width: 23%;
+    padding: 10px 10px 5px 0;
+}
+
+.header_site_templ > .center {
+    width: 53%;
+    padding: 11px 10px 5px 10px;
+}
+
+.header_site_templ > .right {
+    width: 24%;
+    padding: 16px 0 5px 10px;
+}
+
+.main_nav li {
+    padding: 5px 16px;
+}
+
+.logo {
+    font-size: 27px;
+    line-height: 40px;
+}
+
+.tel_link {
+    font-size: 16px;
+    line-height: 19px;
+}
+
+.thumb_2 h3 {
+    font-size: 19px;
+    line-height: 26px;
+}
+
+}
+
+@media only screen and (max-width: 1024px) {
+
+/*-- Section 1 - Main Pages --*/
+
+.h1_wrapp {
+    padding: 21px 0 20px 0;
+}
+
+/*-- /Section 1 - Main Pages --*/
+
+.footer_templ {
+	flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+	padding: 17px 0 12px 0;
+}
+
+.footer_templ > div:nth-child(1) {
+    width: 100%;
+    padding: 5px 0;
+    text-align: center;
+}
+
+.footer_templ > div:nth-child(2) {
+    width: 100%;
+    padding: 5px 0;
+}
+
+.footer_templ > div:nth-child(3) {
+    width: 100%;
+    padding: 5px 0;
+    text-align: center;
+}
+
+.slider_1_wrapp {
+    padding: 40px 0 41px 0;
+}
+
+.slide_1 {
+    height: 400px;
+}
+
+.slide_2 {
+    max-width: 600px;
+}
+
+.slide_2 > div:nth-child(1) {
+    width: 270px;
+}
+
+.slide_2 > div:nth-child(2) {
+    width: calc(100% - 270px);
+}
+
+.slide_2 .inner {
+    padding-top: 6px;
+}
+
+.circle_img_4 {
+    width: 247px;
+    height: 423px;
+}
+
+.slide_2 p {
+    padding: 10px 0;
+    font-size: 16px;
+    line-height: 26px;
+}
+
+.article > div:nth-child(even) {
+    width: 50%;
+    padding-left: 4%;
+}
+
+.article:nth-child(even) > div:nth-child(even) {
+    padding-left: 0;
+    padding-right: 4%;
+}
+
+.article h3 {
+    font-size: 28px;
+}
+
+.article ul {
+    padding: 7px 0 7px 10px;
+}
+
+.article p {
+    padding: 10px 0;
+    font-size: 16px;
+    line-height: 28px;
+}
+
+.testimonial > div:nth-child(1) {
+    width: 260px;
+    padding-top: 10px;
+}
+
+.testimonial > div:nth-child(2) {
+    width: calc(100% - 260px);
+    padding-left: 5%;
+}
+
+.testimonial > div:nth-child(3) {
+	padding-top: 10px;
+}
+
+.testimonial > div:nth-child(4) {
+	width: calc(100% - 118px);
+    padding: 27px 0 0 20px;
+}
+
+.testimonial_descript {
+    max-width: 100%;
+}
+
+.slide_4 {
+    height: 400px;
+}
 
 }
 
 
 @media only screen and (max-width: 900px) {
 
+h1 {
+    font-size: 43px;
+}
 
+h2 {
+    font-size: 37px;
+}
+
+.header_site_templ > .center {
+    width: 51%;
+}
+
+.header_site_templ > .right {
+    width: 26%;
+}
+
+.logo {
+    font-size: 24px;
+    line-height: 40px;
+}
+
+.main_nav li {
+    padding: 5px 10px;
+}
+
+/*-- Section 1 - Main Pages --*/
+
+.title_shape_1 {
+    top: 14px;
+    left: 105px;
+}
+
+.title_shape_2 {
+    top: 13px;
+    left: 182px;
+}
+
+.title_shape_3 {
+    top: 11px;
+    left: 180px;
+}
+
+.title_shape_4 {
+    top: 11px;
+    left: 2px;
+}
+
+.thumbnails_2_wrapp {
+	flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+    margin: 32px 0 0 0;
+}
+
+.thumb_2 {
+    width: 100%;
+    max-width: 100%;
+    padding: 5px 0;
+}
+
+.thumb_2:before {
+    margin: 10px 0;
+}
+
+.sect_3 {
+    padding: 64px 0 41px 0;
+}
+
+.title_shape_5 {
+    top: 11px;
+    left: 67px;
+}
+
+.single_img_wrapp {
+    height: 230px;
+}
+
+.thumb_3 {
+    width: 50%;
+    padding: 10px 10px;
+}
+
+.thumb_3 p {
+    font-size: 16px;
+    line-height: 25px;
+}
+
+/*-- /Section 1 - Main Pages --*/
+
+.section_2 {
+    padding: 60px 0 60px 0;
+}
+
+.title_shape_6 {
+    top: 11px;
+    left: 210px;
+}
+
+.two_cols_2 {
+    margin-top: -30px;
+}
+
+.thumbnails_4_wrapp {
+    margin: 49px -30px 20px -30px;
+}
+
+.circle_img_3 {
+	width: 173px;
+	height: 230px;
+}
+
+.two_cols_2 > div:nth-child(1) {
+    width: 173px;
+}
+
+.two_cols_2 > div:nth-child(2) {
+    width: calc(100% - 173px);
+}
+
+.thumb_4:before {
+    margin: 4px 0 8px 0;
+}
+
+.thumb_4 h3 {
+    font-size: 18px;
+}
+
+.two_cols_2 .cllback_btn_circle_2 {
+    margin: 25px auto;
+}
+
+.section_4 {
+    padding: 80px 0 60px 0;
+}
+
+.title_shape_7 {
+    top: 11px;
+    left: 223px;
+}
+
+.title_shape_8 {
+    top: 11px;
+    left: 52px;
+}
+
+.thumbnails_5_wrapp {
+    margin: 2px 0;
+}
+
+.thumb_5 {
+    width: 100%;
+    margin: 10px 0;
+    padding-left: 67px;
+}
+
+.thumb_5_inner {
+    min-height: auto;
+}
+
+.thumb_5_inner p {
+    padding: 2px 0;
+}
+
+.title_shape_9 {
+    top: 11px;
+    left: 47px;
+}
+
+.time_item {
+    margin-top: 10px;
+}
+
+.time_item h3 {
+    font-size: 26px;
+}
+
+.time_items_star {
+    top: 194px;
+}
+
+.more_link_2 {
+    padding-right: 65px;
+    font-size: 14px;
+}
+
+.time_item > div:nth-child(2) {
+    width: calc(100% - 370px);
+    padding-top: 3px;
+}
+
+.time_item > div:nth-child(3) {
+    width: 243px;
+}
+
+.title_shape_10 {
+    top: 10px;
+    left: 4px;
+}
+
+.testimonial > div:nth-child(2):after {
+	display: none;
+}
+
+.sect_8 {
+    padding: 38px 0 15px 0;
+}
+
+.title_shape_11 {
+    top: 11px;
+    left: 83px;
+}
+
+.title_shape_12 {
+    top: 11px;
+    left: 42px;
+}
+
+.question_item_title {
+    padding: 17px 54px 16px 0;
+}
+
+.question_item_title h3 {
+    font-size: 22px;
+}
+
+.question_item_title:after {
+    top: 21px;
+}
+
+.question_item_dropdown {
+    padding: 14px 0 13px 0;
+}
+
+.title_shape_13 {
+    top: 10px;
+    left: 244px;
+}
+
+.title_shape_14 {
+    top: 11px;
+    left: 220px;
+}
+
+.title_shape_15 {
+    top: 11px;
+    left: 324px;
+}
 
 }
 
 @media only screen and (max-width: 767px) {
 
+.wrapper {
+	padding-top: 60px;
+}
 
+.header_site {
+	width: 100%;
+	background: #363138;
+	z-index: 10;
+	position: fixed;
+	top: 0;
+	left: 0;
+}
+
+.header_site_templ > .left {
+    width: 42%;
+    padding: 6px 10px 2px 0;
+}
+
+.header_site_templ > .center {
+    width: 0;
+    padding: 0;
+}
+
+.header_site_templ > .right {
+    width: 58%;
+    padding: 12px 0 2px 10px;
+}
+
+.respmenubtn {
+	display: inline-block;
+	vertical-align: top;
+	margin-left: 10px;
+	top: -7px;
+}
+
+#resp_nav {
+	/*display: block;*/
+	display: none;
+	max-width: 100vw;
+	width: 100vw;
+	height: calc(100vh - 60px);
+    overflow-x: hidden;
+	overflow-y: auto;
+	margin: 0;
+	padding: 30px 10px 50px 10px;
+	position: fixed;
+	top: 60px;
+	left: 0;
+	z-index: 13;
+	background: #363138;
+}
+
+.resp_tree_cols {
+    display: flex;
+    display: -webkit-flex;
+}
+
+.main_nav {
+	display: block;
+}
+
+.main_nav li {
+	width: 100%;
+	padding: 10px 0;
+	text-align: center;
+}
+
+.main_nav li a {
+    font-size: 21px;
+    line-height: 21px;
+}
+
+.h1_wrapp h1:nth-child(2) {
+    left: 27%;
+}
+
+.promo_tree_cols > div:nth-child(1) {
+    width: 200px;
+}
+
+.promo_tree_cols > div:nth-child(2) {
+    width: calc(67% - 200px);
+}
+
+.promo_tree_cols > div:nth-child(3) {
+    width: 33%;
+}
+
+.thumb_01 {
+    width: 100%;
+}
+
+.video_thumb {
+    display: block;
+    width: 174px;
+}
+
+.sect_2 {
+    padding: 70px 0 0 0;
+}
+
+.two_cols {
+    margin-top: 16px;
+}
+
+.two_cols > div:nth-child(1) {
+    width: calc(100% - 170px);
+}
+
+.two_cols > div:nth-child(2) {
+    width: 170px;
+}
+
+.thumbnails_2_wrapp {
+    margin: 0;
+}
+
+.thumb_2 {
+    width: 100%;
+    max-width: 100%;
+    padding: 5px 0;
+}
+
+.thumb_2:before {
+    margin: 10px 0;
+}
+
+.circle_img_2 {
+	width: 170px;
+	height: 300px;
+}
+
+.slide_2 > div:nth-child(1) {
+    width: 170px;
+}
+
+.slide_2 > div:nth-child(2) {
+    width: calc(100% - 170px);
+    padding-left: 10px;
+}
+
+.slide_2 .cllback_btn_circle_2 {
+    margin-top: 0;
+}
+
+.circle_img_4 {
+    width: 163px;
+    height: 280px;
+}
+
+.slide_2 h3 {
+    padding: 10px 0;
+    font-size: 22px;
+}
+
+.slide_2 p {
+    padding: 10px 0;
+    font-size: 14px;
+    line-height: 23px;
+}
+
+.cllback_btn_circle_2 {
+    width: 80px;
+    height: 80px;
+}
+
+.section_3 {
+    padding: 53px 0 20px 0;
+}
+
+.articles {
+    padding: 28px 0;
+}
+
+.article {
+	flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+    margin: 20px 0;
+}
+
+.article > div:nth-child(odd) {
+    width: 100%;
+    padding-top: 10px;
+}
+
+.article > div:nth-child(even) {
+    width: 100%;
+    padding: 10px 0 10px 0;
+    border-bottom: 1px solid #C2A9DC;
+}
+
+.article:last-child > div:nth-child(even) {
+    border-bottom: none;
+}
+
+.article:nth-child(even) > div:nth-child(odd) {
+	width: 100%;
+    order: 1;
+}
+
+.article:nth-child(even) > div:nth-child(even) {
+    width: 100%;
+    padding: 10px 0 10px 0;
+}
+
+.article_img_box {
+    min-height: 360px;
+}
+
+.time_items {
+    margin: 28px 0 53px 0;
+}
+
+.time_item {
+	flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+	padding: 14px 0 10px 0;
+}
+
+.time_item > div:nth-child(1) {
+    width: 100%;
+    padding-top: 0;
+}
+
+.time_item > div:nth-child(2) {
+    width: calc(100% - 243px);
+    padding-top: 0;
+}
+
+.time_items_star {
+	display: none;
+}
+
+}
+
+@media only screen and (max-width: 700px) {
+
+.two_cols_2 {
+	flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+	margin-top: 20px;
+}
+
+.two_cols_2 > div:nth-child(1) {
+    width: 100%;
+    position: relative;
+}
+
+.two_cols_2 > div:nth-child(1) .cllback_btn_circle_2 {
+	position: absolute;
+	top: 30px;
+	right: 10%;
+}
+
+.two_cols_2 > div:nth-child(2) {
+    width: 100%;
+    padding-left: 0;
+}
+
+.slide_2 {
+    max-width: 531px;
+}
+
+.two_cols_3 {
+	flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+}
+
+.two_cols_3 > div:nth-child(1) {
+    width: 100%;
+    padding-right: 0;
+    order: 2;
+}
+
+.two_cols_3 > div:nth-child(2) {
+    width: 250px;
+    margin: 0 auto;
+    padding-bottom: 30px;
+    order: 1;
+}
+
+.thumbnails_5_wrapp {
+    margin: 2px -20px;
+}
+
+.thumb_5 {
+    width: calc(50% - 40px);
+    margin: 20px 20px;
+}
+
+.two_cols_3_2 {
+	flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+}
+
+.two_cols_3_2 > div:nth-child(1) {
+    width: 260px;
+    margin: 0 auto;
+    padding-bottom: 30px;
+}
+
+.two_cols_3_2 > div:nth-child(2) {
+    width: 100%;
+    padding-left: 0;
+}
+
+.thumb_5_2 {
+    width: 100%;
+    margin: 20px 0;
+}
+
+.testimonial > div:nth-child(2) {
+    width: 100%;
+    padding-top: 10px;
+    padding-left: 0;
+}
+
+.testimonial_descript p {
+    padding: 7px 0;
+}
+
+.testimonial > div:nth-child(3) {
+    width: 90px;
+}
+
+.testimonial > div:nth-child(4) {
+    width: calc(100% - 100px);
+    padding: 19px 0 0 10px;
+}
+
+.testimonial_author {
+    width: 80px;
+    height: 80px;
+}
+
+.author_link_wrapp h3 {
+    padding: 4px 0;
+    font-size: 21px;
+}
 
 }
 
 @media only screen and (max-width: 600px) {
 
+h1 {
+    font-size: 31px;
+}
 
+h2 {
+    font-size: 27px;
+}
+
+.shape {
+	display: none;
+}
+
+.title_shape {
+	display: none;
+}
+
+.promo_tree_cols {
+	flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+}
+
+.promo_tree_cols > div:nth-child(2) {
+    width: calc(100% - 200px);
+}
+
+.promo_tree_cols > div:nth-child(3) {
+    width: 100%;
+    padding: 10px 0;
+}
+
+.thumb_01_header {
+    min-height: auto;
+    padding: 10px 0;
+    text-align: center;
+}
+
+.star_circle {
+	display: none;
+}
+
+.video_thumb {
+    width: 100%;
+    max-width: 360px;
+    margin: 0 auto;
+}
+
+.h1_wrapp {
+	text-align: center;
+}
+
+.h1_wrapp h1:nth-child(1) {
+    left: 0;
+}
+
+.h1_wrapp h1:nth-child(2) {
+    left: 0;
+}
+
+.h1_wrapp h1:nth-child(3) {
+	left: 0;
+}
+
+.promo_tree_cols > div:nth-child(1) {
+    width: 133px;
+}
+
+.promo_tree_cols > div:nth-child(2) {
+    width: calc(100% - 133px);
+}
+
+.circle_image_1 {
+    width: 133px;
+    height: 211px;
+}
+
+.promo_tree_cols .callback_btn_circle {
+    margin: 25px auto;
+}
+
+.h2_title {
+	text-align: center;
+}
+
+.h2_title h2:nth-child(2) {
+    left: 0;
+}
+
+.h2_title h2:nth-child(3) {
+    left: 0;
+}
+
+.two_cols > div:nth-child(1) {
+    width: calc(100% - 110px);
+}
+
+.two_cols > div:nth-child(2) {
+    width: 110px;
+}
+
+.thumb_2 {
+    padding: 1px 0;
+}
+
+.thumb_2 h3 {
+    font-size: 15px;
+    line-height: 24px;
+}
+
+.circle_img_2 {
+    width: 110px;
+    height: 200px;
+}
+
+.thumb_2:before {
+    margin: 4px 0;
+    width: 30px;
+    height: 30px;
+}
+
+.h2_title_2 > h2:nth-child(1) {
+    left: 0;
+}
+
+.slider_1_wrapp {
+    padding: 13px 0 28px 0;
+}
+
+.slide_1 {
+    height: 240px;
+}
+
+.slider_1 .slick-dots {
+	margin: 15px 0;
+}
+
+.h2_title_4 h2:nth-child(1) {
+    left: 0;
+}
+
+.circle_img_4 {
+    width: 100px;
+    height: 172px;
+}
+
+.slide_2 > div:nth-child(1) {
+    width: 110px;
+    padding-top: 10px;
+}
+
+.slide_2 > div:nth-child(2) {
+    width: calc(100% - 110px);
+    padding-right: 80px;
+    position: relative;
+}
+
+.slide_2 .cllback_btn_circle_2 {
+	position: absolute;
+	top: 53px;
+    right: 0;
+}
+
+.slide_2 h3 {
+    padding: 4px 0;
+    font-size: 20px;
+}
+
+.slide_2 p {
+    padding: 6px 0;
+    line-height: 21px;
+}
+
+.section_4 {
+    padding: 65px 0 25px 0;
+}
+
+.thumbnails_5_wrapp {
+    margin: 2px 0;
+}
+
+.thumb_5 {
+    width: 100%;
+    margin: 20px 0;
+}
+
+.h2_title_5 h2:nth-child(1) {
+    left: 0;
+}
+
+.time_item > div:nth-child(2) {
+    width: 100%;
+    padding-top: 0;
+}
+
+.h2_title_7 h2:nth-child(1) {
+    left: 0;
+}
+
+.h2_title_8 h2:nth-child(1) {
+    left: 0;
+}
+
+.slider_4_wrapp {
+    padding: 59px 0 47px 0;
+}
+
+.slide_4 {
+    height: 240px;
+}
+
+.slider_star {
+    top: 0;
+    right: 6px;
+}
+
+.h2_title_9 h2:nth-child(1) {
+    left: 0;
+}
+
+.questions {
+    padding: 29px 0 40px 0;
+}
 
 }
 
-
 @media only screen and (max-width: 480px) {
 
-	
+	.row {
+	    padding: 0 15px;
+	}
+
+	.header_site_templ > .left {
+	    width: 60%;
+	}
+
+	.header_site_templ > .right {
+	    width: 40%;
+	}
+
+	.tel_link span {
+		display: none;
+	}
+
+	h1 {
+	    font-size: 24px;
+	}
+
+	.thumb_3 {
+	    width: 100%;
+	    padding: 10px 0;
+	}
+
+	.thumbnails_4_wrapp {
+	    margin: 20px 0;
+	}
+
+	.thumb_4 {
+	    width: 100%;
+	    padding: 7px 0;
+	}
+
+	.thumb_4_img {
+	    width: 100%;
+	    left: 0;
+	}
+
+	.two_cols_2 > div:nth-child(1) .cllback_btn_circle_2 {
+	    top: 30px;
+	    right: 0;
+	}
+
+}
+
+@media only screen and (max-width: 475px) {
+
+.section_2 {
+    padding: 40px 0;
+}
+
+.slide_2 {
+	flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+}
+
+.slide_2 > div:nth-child(1) {
+    width: 110px;
+    padding-top: 0;
+}
+
+.slide_2 > div:nth-child(2) {
+    width: 100%;
+    padding-right: 0;
+    padding-left: 0;
+}
+
+.slide_2 .cllback_btn_circle_2 {
+    position: absolute;
+    top: auto;
+    right: 0;
+    bottom: 100%;
+}
+
+.circle_img_4 {
+    width: 116px;
+    height: 198px;
+}
+
+}
+
+@media only screen and (max-width: 370px) {
+
+	.circle_img_3 {
+	    width: 125px;
+	    height: 167px;
+	}
+
+	.two_cols_2 > div:nth-child(1) .cllback_btn_circle_2 {
+	    top: 7px;
+	}
+
+}
+
+@media only screen and (min-width: 768px) {
+	#resp_nav {
+		display: block !important;
+	}
 }
