--- a/style.css
+++ b/style.css
@@ -398,7 +398,6 @@ textarea:focus {
     background: #E9D5FE;
 }
 
-
 /*-------------------------------------------*/
 /* ----- HEADER ------ */
 /*-------------------------------------------*/
@@ -551,7 +550,7 @@ textarea:focus {
     display: block;
     width: 27px;
     height: 2px;
-    background: #466896;
+    background: #C4B0D9;
     margin: 0 auto 7px auto;
     -webkit-transition-property: transform, border, background;
     -webkit-transition-duration: .3s;
@@ -584,7 +583,7 @@ textarea:focus {
 }
 
 .respmenubtn:hover span {
-    background: #e9ba5f;
+    background: #C4B0D9;
 }
 
 .respmenubtn.active span {
@@ -592,7 +591,7 @@ textarea:focus {
     width: 35px;
     top: 2px;
     left: 0;
-    background: #e9ba5f;
+    background: #C4B0D9;
 }
 
 .respmenubtn.active span:last-child {
@@ -624,6 +623,41 @@ textarea:focus {
 /*-------------------------------------------*/
 
 /*-- Section 1 - Main Pages --*/
+
+.section_1 {
+    position: relative;
+}
+
+.shape {
+    position: absolute;
+}
+
+.shape_1 {
+    width: 492px;
+    height: 492px;
+    background: #C4B0D9;
+    filter: blur(600px);
+    top: 22%;
+    right: 0;
+}
+
+.shape_2 {
+    width: 375px;
+    height: 375px;
+    background: #C4B0D9;
+    filter: blur(600px);
+    top: 36%;
+    left: 0;
+}
+
+.shape_3 {
+    width: 351px;
+    height: 351px;
+    background: #C4B0D9;
+    filter: blur(600px);
+    top: 60.5%;
+    right: 19%;
+}
 
 .h1_wrapp {
     padding: 57px 0 20px 0;
@@ -718,6 +752,7 @@ textarea:focus {
     display: block;
     width: 234px;
     height: 234px;
+    overflow: hidden;
     position: relative;
 }
 
@@ -922,6 +957,30 @@ textarea:focus {
 
 .section_2 {
     padding: 125px 0 75px 0;
+}
+
+section {
+    position: relative;
+}
+
+section > .row {
+    position: relative;
+    z-index: 2;
+}
+
+.shape_4 {
+    top: 0;
+    left: 0;
+}
+
+.shape_5 {
+    top: 0;
+    right: 0;
+}
+
+.shape_6 {
+    top: 49.5%;
+    left: 0;
 }
 
 .dark h2 {
@@ -1151,6 +1210,42 @@ p.price {
     padding: 70px 0 31px 0;
 }
 
+.shape_7 {
+    width: 492px;
+    height: 492px;
+    background: #C4B0D9;
+    filter: blur(600px);
+    top: 5%;
+    right: 0;
+}
+
+.shape_8 {
+    width: 375px;
+    height: 375px;
+    background: #C4B0D9;
+    filter: blur(600px);
+    top: 25.5%;
+    left: 0;
+}
+
+.shape_9 {
+    width: 492px;
+    height: 492px;
+    background: #C4B0D9;
+    filter: blur(600px);
+    top: 58%;
+    right: 0;
+}
+
+.shape_10 {
+    width: 375px;
+    height: 375px;
+    background: #C4B0D9;
+    top: 79%;
+    left: 0;
+    filter: blur(600px);
+}
+
 .articles {
     padding: 43px 0;
 }
@@ -1241,7 +1336,7 @@ p.price {
 
 .article h3 {
     font-size: 32px;
-    line-height: 24px;
+    line-height: 1.1;
     color: #FFF;
 }
 
@@ -1283,6 +1378,16 @@ p.price {
 
 .section_4 {
     padding: 126px 0 101px 0;
+}
+
+.shape_11 {
+    top: -316px;
+    left: -53px;
+}
+
+.shape_12 {
+    top: 0;
+    right: 0;
 }
 
 .h2_title_5 h2:nth-child(1) {
@@ -1440,6 +1545,31 @@ p.price {
     padding-top: 69px;
 }
 
+.shape_13 {
+    top: 0;
+    left: 0;
+}
+
+.shape_14 {
+    top: 0;
+    right: 0;
+}
+
+.shape_15 {
+    top: 952px;
+    left: 0;
+}
+
+.shape_16 {
+    top: 2527px;
+    left: 0;
+}
+
+.shape_17 {
+    bottom: 0;
+    right: -300px;
+}
+
 .h2_title_6 > h2:nth-child(2) {
     left: 32%;
 }
@@ -1450,7 +1580,7 @@ p.price {
 
 .title_shape_9 {
     top: 38px;
-    left: 10%;
+    left: 114px;
 }
 
 .time_items {
@@ -1620,7 +1750,8 @@ p.price {
 
 .testimonial_img {
     height: 351px;
-    width: 351px;
+    width: 100%;
+    max-width: 351px;
     background-color: #C4C4C4;
     position: relative;
 }
@@ -1768,8 +1899,9 @@ p.price {
 
 .slide_4 {
     height: 600px;
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+    background-position: center !important;
 }
 
 .slider_4_arrows {
@@ -1818,7 +1950,7 @@ p.price {
 
 .question_item_title {
     cursor: pointer;
-    padding: 23px 0 23px 0;
+    padding: 23px 54px 23px 0;
     border-bottom: 1px solid #C4C4C4;
     position: relative;
 }
@@ -2009,3 +2141,147 @@ footer {
     line-height: 34px;
     color: #FFF;
 }
+
+/*-- Animation --*/
+
+.leftSlice {
+    position: relative;
+    left: -3%;
+    opacity: 0;
+    -webkit-transition-property: left, opacity;
+    -webkit-transition-duration: .7s;
+    -webkit-transition-delay: .3s;
+    -webkit-transition-timing-function: ease-in-out;
+
+    -moz-transition-property: left, opacity;
+    -moz-transition-duration: .7s;
+    -moz-transition-delay: .3s;
+    -moz-transition-timing-function: ease-in-out;
+
+    -ms-transition-property: left, opacity;
+    -ms-transition-duration: .7s;
+    -ms-transition-delay: .3s;
+    -ms-transition-timing-function: ease-in-out;
+
+    -o-transition-property: left, opacity;
+    -o-transition-duration: .7s;
+    -o-transition-delay: .3s;
+    -o-transition-timing-function: ease-in-out;
+
+    transition-property: left, opacity;
+    transition-duration: .7s;
+    transition-delay: .3s;
+    transition-timing-function: ease-in-out;
+}
+
+.animate.active.leftSlice {
+    left: 0;
+    opacity: 1;
+}
+
+.fadeIn {
+    opacity: 0;
+    -webkit-transition-property: opacity;
+    -webkit-transition-duration: .7s;
+    -webkit-transition-delay: .3s;
+    -webkit-transition-timing-function: ease-in-out;
+
+    -moz-transition-property: opacity;
+    -moz-transition-duration: .7s;
+    -moz-transition-delay: .3s;
+    -moz-transition-timing-function: ease-in-out;
+
+    -ms-transition-property: opacity;
+    -ms-transition-duration: .7s;
+    -ms-transition-delay: .3s;
+    -ms-transition-timing-function: ease-in-out;
+
+    -o-transition-property: opacity;
+    -o-transition-duration: .7s;
+    --transition-delay: .3s;
+    -o-transition-timing-function: ease-in-out;
+
+    transition-property: opacity;
+    transition-duration: .7s;
+    transition-delay: .3s;
+    transition-timing-function: ease-in-out;
+}
+
+.animate.active.fadeIn {
+    opacity: 1;
+}
+
+.zoomFade {
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    transform: scale(0);
+    opacity: 0;
+    -webkit-transition-property: opacity, transform;
+    -webkit-transition-duration: .7s;
+    -webkit-transition-delay: .3s;
+    -webkit-transition-timing-function: ease-in-out;
+
+    -moz-transition-property: opacity, transform;
+    -moz-transition-duration: .7s;
+    -moz-transition-delay: .3s;
+    -moz-transition-timing-function: ease-in-out;
+
+    -ms-transition-property: opacity, transform;
+    -ms-transition-duration: .7s;
+    -ms-transition-delay: .3s;
+    -ms-transition-timing-function: ease-in-out;
+
+    -o-transition-property: opacity, transform;
+    -o-transition-duration: .7s;
+    --transition-delay: .3s;
+    -o-transition-timing-function: ease-in-out;
+
+    transition-property: opacity, transform;
+    transition-duration: .7s;
+    transition-delay: .3s;
+    transition-timing-function: ease-in-out;
+}
+
+.animate.active.zoomFade {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    transform: scale(1);
+}
+
+.fadeInUp {
+    position: relative;
+    bottom: -20px;
+    opacity: 0;
+    -webkit-transition-property: bottom, opacity;
+    -webkit-transition-duration: .7s;
+    -webkit-transition-delay: .3s;
+    -webkit-transition-timing-function: ease-in-out;
+
+    -moz-transition-property: bottom, opacity;
+    -moz-transition-duration: .7s;
+    -moz-transition-delay: .3s;
+    -moz-transition-timing-function: ease-in-out;
+
+    -ms-transition-property: bottom, opacity;
+    -ms-transition-duration: .7s;
+    -ms-transition-delay: .3s;
+    -ms-transition-timing-function: ease-in-out;
+
+    -o-transition-property: bottom, opacity;
+    -o-transition-duration: .7s;
+    -o-transition-delay: .3s;
+    -o-transition-timing-function: ease-in-out;
+
+    transition-property: bottom, opacity;
+    transition-duration: .7s;
+    transition-delay: .3s;
+    transition-timing-function: ease-in-out;
+}
+
+.animate.active.fadeInUp {
+    bottom: 0;
+    opacity: 1;
+}
+
+/*-- /Animation --*/
